@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Remove global variables. Make functions static.
+ random_maps/maze_gen.c maze_gen.h rproto.h
+Nicolas Weeger 2008-03-30
+
 Remove unused parameter, rename to better name.
  server/attack.c
 Nicolas Weeger 2008-03-30
